# todo_ai_worshop

./: .cursorignore  .cursorrules  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/routers/: tasks.py
app/core/: config.py
app/db/: models.py  repository.py  session.py
app/schemas/: task.py
app/services/: ai_priority_service.py  task_service.py
migrations/: env.py
tests/: conftest.py  test_tasks_api.py
